...
    <string name="app_name">EnglishForum</string>

    <string name="auth_logo_content_description">Logo</string>
    <string name="auth_username_label">Tên đăng nhập</string>
    <string name="auth_password_label">Mật khẩu</string>
    <string name="auth_keep_logged_in">Duy trì đăng nhập</string>
    <string name="auth_toggle_hide">Ẩn</string>
    <string name="auth_toggle_show">Hiện</string>
    <string name="auth_login">Đăng nhập</string>
    <string name="auth_forgot_password">Quên mật khẩu</string>
    <string name="auth_register">Đăng ký</string>
    <string name="auth_full_name_label">Họ và tên</string>
    <string name="auth_phone_number_label">Số điện thoại</string>
    <string name="auth_email_label">Email</string>
...
